--- a/application/index.html
+++ b/application/index.html
@@ -42,7 +42,7 @@
         </div>
 
 
-        <div id="app" class="width-100 height-100">
+        <div id="app" class="width-100">
      
         </div>
         <div id="message-input" class="flex width-100 justify-content-center">
@@ -63,7 +63,7 @@
     
 
 </body>
-
+<script  src="./assets/js/qrious.js"></script>
     <script type="module" src="index.js"></script>
 
 
