--- a/application/index.html
+++ b/application/index.html
@@ -46,7 +46,7 @@
      
         </div>
         <div id="message-input" class="flex width-100 justify-content-center">
-            <input class="width-90" type="text">
+            <input type="text">
         </div>
 
         
