--- a/application/index.html
+++ b/application/index.html
@@ -20,7 +20,7 @@
      
 
         <div id="toast"></div>
-        <div id="side-toast" class="width-100"></div>
+        <div id="side-toast"></div>
 
             <div id="bottom-bar">
                 <div class="inner flex justify-content-spacebetween width-100">
