--- a/application/index.html
+++ b/application/index.html
@@ -59,7 +59,7 @@
     
 
 </body>
-<script src="assets/js/peerjs.min.js"></script>
+<script src="assets/js/peerjs.js"></script>
 <script type="module" src="index.js"></script>
 
 </html>
