--- a/application/index.html
+++ b/application/index.html
@@ -25,6 +25,13 @@ content="width=device-width,user-scalable=no,initial-scale=1"
         <div id="toast"></div>
         <div id="side-toast"></div>
 
+        <div class="loading-spinner">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+          </div>
+
             <div id="bottom-bar">
                 <div class="inner flex justify-content-spacebetween width-100">
                     <div class="button-left"></div>
