--- a/webpage/index.html
+++ b/webpage/index.html
@@ -1,21 +1,18 @@
 <!DOCTYPE html>
 <html>
 
-<head>
+<head><script nomodule="" defer="" src="index.runtime.20da86ed.js"></script><script type="module" src="index.runtime.50c9ac71.js"></script>
     <title>flop</title>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes">
 
-    <link rel="stylesheet" href="assets/css/main.css" />
-    <link rel="stylesheet" href="assets/css/grid.css" />
-    <link rel="stylesheet" href="assets/css/qr-reader.css" />
+    <link rel="stylesheet" href="index.f7150fd4.css">
+    <link rel="stylesheet" href="index.0463c913.css">
+    <link rel="stylesheet" href="index.722ce44c.css">
 </head>
 
-<meta
-name="viewport"
-content="width=device-width,user-scalable=no,initial-scale=1"
-/>
+<meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1">
 
 <body>
     <div id="toast"></div>
@@ -59,18 +56,18 @@ content="width=device-width,user-scalable=no,initial-scale=1"
             <div id="corner-no"></div>
             <div id="corner-so"></div>
             <div id="corner-sw"></div>
-            <div id="startDecoding" hidden>Start Scanning</div>
+            <div id="startDecoding" hidden="">Start Scanning</div>
         </div>
 
 
         <div id="app" class="width-100 flex justify-content-spacearound"></div>
     </div>
 
-    </div>
+    
 
 </body>
-<script type="module" src="index.js"></script>
-<script src="assets/js/peerjs.js"></script>
+<script type="module" src="index.b5c91826.js"></script><script src="index.5f94eaba.js" nomodule="" defer=""></script>
+<script src="index.4fc93e42.js"></script>
 <script src="http://127.0.0.1/api/v1/shared/core.js"></script>
 <script src="http://127.0.0.1/api/v1/shared/session.js"></script>
 <script src="http://127.0.0.1/api/v1/apps/service.js"></script>
