website app launcher

--- a/application/index.html
+++ b/application/index.html
@@ -7,6 +7,11 @@
     <meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1" />
     <meta name="apple-mobile-web-app-capable" content="yes">
 
+    <link rel="icon" href="assets/icons/favicon.ico" sizes="any">
+    <link rel="apple-touch-icon" href="assets/icons/apple-touch-icon.png">
+
+    <link rel="manifest" href="manifest.webmanifest" />
+
     <link rel="stylesheet" href="assets/css/main.css" />
     <link rel="stylesheet" href="assets/css/grid.css" />
     <link rel="stylesheet" href="assets/css/qr-reader.css" />
