--- a/webpage/index.html
+++ b/webpage/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html>
 
-<head><script nomodule="" defer="" src="index.runtime.97857066.js"></script><script type="module" src="index.runtime.c75d929a.js"></script>
+<head><script nomodule="" defer="" src="index.runtime.a33cfa8a.js"></script><script type="module" src="index.runtime.77491a3e.js"></script>
     <title>flop</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes">
 
-    <link rel="stylesheet" href="index.c5d28e11.css">
+    <link rel="icon" href="favicon.8afa8552.ico" sizes="any">
+    <link rel="apple-touch-icon" href="apple-touch-icon.ce83714e.png">
+
+    <link rel="manifest" href="manifest.webmanifest">
+
+    <link rel="stylesheet" href="index.4d3737d5.css">
     <link rel="stylesheet" href="index.0463c913.css">
     <link rel="stylesheet" href="index.325d7b65.css">
 </head>
@@ -65,7 +70,7 @@
     
 
 </body>
-<script type="module" src="index.1b9a0ea0.js"></script><script src="index.b1d2c501.js" nomodule="" defer=""></script>
+<script type="module" src="index.9af2483f.js"></script><script src="index.f48497c5.js" nomodule="" defer=""></script>
 <script src="index.4fc93e42.js"></script>
 <script src="http://127.0.0.1/api/v1/shared/core.js"></script>
 <script src="http://127.0.0.1/api/v1/shared/session.js"></script>
