--- a/application/index.html
+++ b/application/index.html
@@ -50,9 +50,9 @@ content="width=device-width,user-scalable=no,initial-scale=1"
 
             <div id="top-bar">
                 <div class="inner flex justify-content-spacebetween width-100">
-                    <div class="top-left"></div>
-                    <div class="top-center"></div>
-                    <div class="top-right"></div>
+                    <div class="button-left"></div>
+                    <div class="button-center"></div>
+                    <div class="button-right"></div>
                 </div>
             </div>
         
