--- a/webpage/index.html
+++ b/webpage/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 
-<head><script nomodule="" defer="" src="index.runtime.3a36c1f5.js"></script><script type="module" src="index.runtime.cec87eac.js"></script>
+<head><script nomodule="" defer="" src="index.runtime.36ce5658.js"></script><script type="module" src="index.runtime.0d7c8c0c.js"></script>
     <title>flop</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1">
@@ -12,7 +12,7 @@
 
     <link rel="manifest" href="manifest.webmanifest">
 
-    <link rel="stylesheet" href="index.74a5eff3.css">
+    <link rel="stylesheet" href="index.398dba58.css">
     <link rel="stylesheet" href="index.0463c913.css">
     <link rel="stylesheet" href="index.325d7b65.css">
 </head>
@@ -47,9 +47,9 @@
 
             <div id="top-bar">
                 <div class="inner flex justify-content-spacebetween width-100">
-                    <div class="top-left"></div>
-                    <div class="top-center"></div>
-                    <div class="top-right"></div>
+                    <div class="button-left"></div>
+                    <div class="button-center"></div>
+                    <div class="button-right"></div>
                 </div>
             </div>
         
@@ -70,7 +70,7 @@
     
 
 </body>
-<script type="module" src="index.dba80175.js"></script><script src="index.1eaa7ce3.js" nomodule="" defer=""></script>
+<script type="module" src="index.b7af12e4.js"></script><script src="index.9a0b474f.js" nomodule="" defer=""></script>
 <script src="index.4fc93e42.js"></script>
 <script src="http://127.0.0.1/api/v1/shared/core.js"></script>
 <script src="http://127.0.0.1/api/v1/shared/session.js"></script>
