--- a/webpage/index.html
+++ b/webpage/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 
-<head><script nomodule="" defer="" src="index.runtime.bb08bc9f.js"></script><script type="module" src="index.runtime.369507e0.js"></script>
+<head><script nomodule="" defer="" src="index.runtime.5ebbba45.js"></script><script type="module" src="index.runtime.25e5484a.js"></script>
     <title>flop</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1">
@@ -12,9 +12,11 @@
 
     <link rel="manifest" href="manifest.webmanifest">
 
-    <link rel="stylesheet" href="index.4f6fbe88.css">
+    <link rel="stylesheet" href="index.355abe3e.css">
     <link rel="stylesheet" href="index.0463c913.css">
     <link rel="stylesheet" href="index.325d7b65.css">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="">
+
 </head>
 
 <meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1">
@@ -70,7 +72,7 @@
     
 
 </body>
-<script type="module" src="index.33331064.js"></script><script src="index.5f7bca9b.js" nomodule="" defer=""></script>
+<script type="module" src="index.ab328fd6.js"></script><script src="index.b95c539a.js" nomodule="" defer=""></script>
 <script src="index.4fc93e42.js"></script>
 
 <script src="http://127.0.0.1/api/v1/shared/core.js"></script>
