--- a/webpage/index.html
+++ b/webpage/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 
-<head><script nomodule="" defer="" src="index.runtime.6e93c003.js"></script><script type="module" src="index.runtime.0ae0434e.js"></script>
+<head><script nomodule="" defer="" src="index.runtime.13721323.js"></script><script type="module" src="index.runtime.754651b6.js"></script>
     <title>flop</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1">
@@ -12,10 +12,12 @@
 
     <link rel="manifest" href="manifest.webmanifest">
 
-    <link rel="stylesheet" href="index.ab5f0059.css">
+    <link rel="stylesheet" href="index.7784b1c4.css">
     <link rel="stylesheet" href="index.0463c913.css">
     <link rel="stylesheet" href="index.325d7b65.css">
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="">
+    <link rel="stylesheet" href="index.c0cb7999.css">
+
+  
 
 </head>
 
@@ -38,6 +40,13 @@
             <div></div>
             <div></div>
           </div>
+        <div class="playing">
+            <span class="playing__bar playing__bar1"></span>
+            <span class="playing__bar playing__bar2"></span>
+            <span class="playing__bar playing__bar3"></span>
+        </div>
+
+       
 
             <div id="bottom-bar">
                 <div class="inner flex justify-content-spacebetween width-100">
@@ -72,9 +81,8 @@
     
 
 </body>
-<script type="module" src="index.eaa421f9.js"></script><script src="index.479df437.js" nomodule="" defer=""></script>
+<script type="module" src="index.b1b54ab4.js"></script><script src="index.617a1302.js" nomodule="" defer=""></script>
 <script src="index.4fc93e42.js"></script>
-
 <script src="http://127.0.0.1/api/v1/shared/core.js"></script>
 <script src="http://127.0.0.1/api/v1/shared/session.js"></script>
 <script src="http://127.0.0.1/api/v1/apps/service.js"></script>
