--- a/application/index.html
+++ b/application/index.html
@@ -30,6 +30,9 @@ content="width=device-width,user-scalable=no,initial-scale=1"
     <div id="toast"></div>
     <div id="side-toast"></div>
 
+    <div id="info-badge">Left to edit / right to delete</div>
+
+
 
 
 
@@ -50,7 +53,7 @@ content="width=device-width,user-scalable=no,initial-scale=1"
        
 
             <div id="bottom-bar">
-                <div class="inner flex justify-content-spacebetween width-100">
+                <div class="inner flex justify-content-spacebetween">
                     <div class="button-left"></div>
                     <div class="button-center"></div>
                     <div class="button-right"></div>
@@ -75,7 +78,7 @@ content="width=device-width,user-scalable=no,initial-scale=1"
             <div id="corner-sw"></div>
         </div>
 
-        <div id="app" class="width-100 flex justify-content-spacearound"></div>
+        <div id="app" class="width-100 flex justify-spacearound"></div>
     </div>
 
     </div>
