--- a/application/index.html
+++ b/application/index.html
@@ -17,6 +17,8 @@
 
     <link rel="stylesheet" href="assets/css/main.css" />
     <link rel="stylesheet" href="assets/css/grid.css" />
+        <link rel="stylesheet" href="assets/css/flexboxgrid.css" />
+
    
 </head>
 
@@ -41,19 +43,29 @@
 
    
 
-    <div id="bottom-bar">
-        <div class="inner flex justify-content-spacebetween">
-            <div class="button-left"></div>
-            <div class="button-center"></div>
-            <div class="button-right"></div>
-        </div>
+ <div id="top-bar" class="container">
+    <div class="row center-xs center-md">
+    <div class="inner col-xs-12 col-md-5">
+      <div class="row between-xs between-md">
+        <div class="button-left"></div>
+        <div class="button-center"></div>
+        <div class="button-right"></div>
+      </div>
     </div>
+  </div>
+</div>
 
-    <div id="top-bar">
-        <div class="inner flex justify-content-spacebetween width-100">
-            <div class="button-left"></div>
-            <div class="button-center"></div>
-            <div class="button-right"></div>
+
+
+     <div id="bottom-bar" class="container">
+        <div class="row center-xs center-md">
+            <div class="inner col-xs-12 col-md-5">
+                <div class="row between-xs between-md">
+                    <div class="button-left"></div>
+                    <div class="button-center"></div>
+                    <div class="button-right"></div>
+                </div>
+            </div>
         </div>
     </div>
     
@@ -71,9 +83,13 @@
 
 
 
-    <div id="wrapper" class="flex">
-        <div id="app" class="width-100 flex justify-spacearound"></div>
+   <div id="wrapper" class="container">
+  <div class="row center-xs center-md">
+    <div id="app" class="col-xs-12 col-md-5">
     </div>
+  </div>
+</div>
+
 
 
 </body>
