update chat data

--- a/application/index.html
+++ b/application/index.html
@@ -4,6 +4,8 @@
 <head>
     <title>flop</title>
     <meta charset="utf-8" />
+    <meta name="description" content="Flop - webRTC chat app">
+    <meta name="keywords" content="flop,chat,KaiOS,localByDesign,webRTC">
     <meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1" />
     <meta name="mobile-web-app-capable" content="yes">
 
