--- a/application/index.html
+++ b/application/index.html
@@ -13,6 +13,8 @@
     <link rel="apple-touch-icon" href="assets/icons/apple-touch-icon.png">
 
     <link rel="manifest" href="manifest.webmanifest" />
+        <link rel="manifest" href="manifest.webapp" />
+
 
     <link rel="stylesheet" href="assets/css/qr-reader.css" />
     <link rel="stylesheet" href="assets/css/leaflet.css" />
@@ -85,12 +87,12 @@
 
 
 
-   <div id="wrapper" class="container">
-  <div class="row center-xs center-md">
-    <div id="app" class="col-xs-12 col-md-5">
+  <div id="wrapper" class="container">
+    <div class="row center-xs center-md">
+      <div id="app" class="col-xs-12 col-md-5">
+      </div>
     </div>
   </div>
-</div>
 
 
 
