--- a/application/index.html
+++ b/application/index.html
@@ -77,8 +77,12 @@
 
   <div id="wrapper" class="container">
     <div class="row center-xs center-md">
+            <div id="sidebar" class="col-md-3"></div>
+
       <div id="app" class="col-xs-12 col-md-5">
       </div>
+      <div id="toolbar" class="col-md-3"></div>
+
     </div>
   </div>
 
